Change the name

--- a/project/project 1.html
+++ b/project/project 1.html
@@ -262,7 +262,7 @@ background-color:black;
 
 	<nav class="navbar nav-expand-sm bg-white" >
 	<div id="top" style="margin-left:30px;">
-		<h1 style="font-family:area;">Personal Blog</h1>
+		<h1 style="font-family:area;">Vijayan K</h1>
 </div>
 <div style="margin-top:110px;text-align:cente;margin-left:30px;">
 	<div id="ani"><button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#nav">
