--- a/project/project 1.html
+++ b/project/project 1.html
@@ -272,7 +272,7 @@ background-color:black;
 
 <ul class="navbar-nav nav-pill">
 <li class="nav-item">
-	<a class="nav-link" href="#home" "active">HOME</a>
+	<a class="nav-link" href="#home" active>HOME</a>
 </li>
 <li class="nav-item">
 		<a class="nav-link" href="#about me">ABOUT ME</a>
