--- a/project/project 1.html
+++ b/project/project 1.html
@@ -279,7 +279,7 @@ background-color:black;
 </li>
 
 <li class="nav-item ">
-		<a class="nav-link " href="#education">EDUCATION</a>
+		<a class="nav-link " href="#education">QUALIFICATION</a>
 
 </li>
 
